update fonts preload link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -9,8 +9,8 @@
     <meta name="description" content="Professional web design, SEO optimization, and digital marketing solutions for businesses. Custom websites that convert visitors into customers." />
     
     <!-- Preload local fonts -->
-    <link rel="preload" href="/fonts/Vazirmatn-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/fonts/Montserrat-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/rtl.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/ltr.woff2" as="font" type="font/woff2" crossorigin>
   </head>
   <body>
     <div id="root"></div>
